--- a/conky.conf
+++ b/conky.conf
@@ -48,7 +48,6 @@ conky.config = {
 
     own_window_argb_visual = true,
     own_window_argb_value = 50,
-    own_window_type = 'dock',
     own_window_hints = "undecorated,below,sticky,skip_taskbar,skip_pager,",
     own_window_transparent = false, 
     
@@ -81,7 +80,7 @@ ${color white}CPU Usage: $cpu% ${alignr}CPU Temp: ${acpitemp}°C
 #
 #FS
 #  
-${color white}File systems $hr 			#add path to your disk's
+${color white}File systems $hr 			#add or delete path to your disk's
 
 ROOT ${fs_used /}/${fs_size /} 
 ${fs_bar 6 /}
@@ -90,7 +89,7 @@ ${fs_bar 6 /home}
 DATA ${fs_used /home/dimm/DATA}/${fs_size /home/dimm/DATA}
 ${fs_bar 6 /home/dimm/DATA}
 #
-#Network
+#Network                               #add your network interface
 # 
 ${color white}Networking $hr
 IP: ${alignr}${addr enp3s0}
