--- a/conky.conf
+++ b/conky.conf
@@ -44,7 +44,7 @@ conky.config = {
 
     own_window = true,
     own_window_class = 'Conky-semi',
-    own_window_type = 'desktop',
+    own_window_type = 'dock',
 
     own_window_argb_visual = true,
     own_window_argb_value = 50,
